--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,11 @@ url: "https://tjathwal.github.io/blog/" # the base hostname & protocol for your 
 twitter_username: jekyllrb
 github_username:  jekyll
 
+
+permalink: pretty
+exclude: ["node_modules/", "*.gemspec", "*.gem", "Gemfile", "Gemfile.lock", "package.json", "package-lock.json",  "script/", "LICENSE.txt", "lib/", "bin/", "README.md", "Rakefile"]
+
+
 # Enable or disable the site search
 search_enabled: true
 
