--- a/_config.yml
+++ b/_config.yml
@@ -63,7 +63,7 @@ color_scheme: nil
 
 
 # Build settings
-remote_theme: just-the-docs
+theme: just-the-docs
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
