--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,7 @@ aux_links:
     - "//github.com/pmarsceill/just-the-docs"
 
 # Footer content appears at the bottom of every page's main content
-footer_content: "Copyright &copy; 2020 Tejpal Athwal. Distributed by an <a href=\"https://github.com/pmarsceill/just-the-docs/tree/master/LICENSE.txt\">MIT license.</a>"
+footer_content: "Copyright &copy; 2020 Tejpal Athwal.</a>"
 
 # Color scheme currently only supports "dark" or nil (default)
 color_scheme: nil
